crates/pv-release/tests/snapshots/smoke__backing_build_recipes_ad_hoc_sign_macho_payloads.snap
---
source: crates/pv-release/tests/smoke.rs
expression: summaries
---
[
    (
        "redis",
        [
            "redis-cli",
            "redis-server",
        ],
        "archive=redis-8.2.1-pv1-darwin-arm64.tar.gz record=redis-8.2.1-pv1-darwin-arm64.json smoke=smoke.sh\n",
    ),
    (
        "mailpit",
        [
            "mailpit",
        ],
        "archive=mailpit-1.30.1-pv1-darwin-arm64.tar.gz record=mailpit-1.30.1-pv1-darwin-arm64.json smoke=smoke.sh\n",
    ),
    (
        "caddy",
        [
            "caddy",
        ],
        "archive=caddy-2.11.4-pv1-darwin-arm64.tar.gz record=caddy-2.11.4-pv1-darwin-arm64.json smoke=smoke.sh\n",
    ),
    (
        "rustfs",
        [
            "rustfs",
        ],
        "archive=rustfs-1.0.0-beta.7-pv1-darwin-arm64.tar.gz record=rustfs-1.0.0-beta.7-pv1-darwin-arm64.json smoke=smoke.sh\n",
    ),
]
