crates/pv-release/tests/snapshots/smoke__common_recipe_helper_removes_only_unmanaged_macho_rpaths.snap
---
source: crates/pv-release/tests/smoke.rs
expression: normalized_log
---
"<tmp>/build/openssl/lib\n"
