crates/pv-release/tests/snapshots/smoke__common_recipe_helper_rewrites_nested_macho_install_names.snap
---
source: crates/pv-release/tests/smoke.rs
expression: rewrites
---
[
    "argv=[-change][<install>/lib/libmysqlclient.dylib][@loader_path/../lib/libmysqlclient.dylib][<tmp>/artifact/bin/mysql]",
    "argv=[-change][<install>/lib/libmysqlclient.dylib][@loader_path/../libmysqlclient.dylib][<tmp>/artifact/lib/plugin/auth.so]",
    "argv=[-change][<install>/lib/libmysqlclient.dylib][@loader_path/../libmysqlclient.dylib][<tmp>/artifact/lib/postgresql/extension.so]",
    "argv=[-change][<install>/lib/libmysqlclient.dylib][@loader_path/libmysqlclient.dylib][<tmp>/artifact/lib/libmysqlclient.dylib]",
    "argv=[-id][@loader_path/libmysqlclient.dylib][<tmp>/artifact/lib/libmysqlclient.dylib]",
]
