crates/pv-release/tests/snapshots/smoke__frankenphp_build_smoke_rejects_homebrew_rpath.snap
---
source: crates/pv-release/tests/smoke.rs
expression: build_recipe_output_summary(&run)
---
(
    false,
    Some(
        1,
    ),
    "",
    "error: <out>/work/frankenphp-8.4.20-frankenphp1.12.3-pv1-darwin-arm64/frankenphp-8.4.20-frankenphp1.12.3-pv1-darwin-arm64/bin/frankenphp Mach-O rpath references unmanaged runtime path /usr/local/opt/openssl@3/lib\n",
)
