crates/pv-release/tests/snapshots/smoke__frankenphp_build_smoke_uses_combined_staticphp_command_and_verified_source-2.snap
---
source: crates/pv-release/tests/smoke.rs
expression: build_recipe_notice_source_lines(&run)?
---
[
    "This recipe packages PHP source archives listed in tracks.toml for standalone",
    "This recipe packages FrankenPHP source archives listed in tracks.toml for",
    "Artifact-specific resource, track, version, source URL, and source checksum",
    "Resource: frankenphp",
    "FrankenPHP source URL: https://sources.example.test/frankenphp.tar.gz",
    "FrankenPHP source SHA-256: 9944cd74d8e9635698f4412a3d26600c34fe237ff01d4638d7d83a21ef576169",
    "PHP source URL: https://sources.example.test/php.tar.gz",
    "PHP source SHA-256: bdb89561cd7fc76f85811f972deb34bde88e335be6e19bcc6983fb364195b36d",
]
