crates/pv-release/tests/snapshots/smoke__mysql_80_build_recipe_records_boost_source_input.snap
---
source: crates/pv-release/tests/smoke.rs
expression: mysql_record_source_inputs(&run)?
---
Array [
    Object {
        "name": String("openssl"),
        "source_sha256": String("ae8fb74173066e791044f26e58c3d089b261b2170e47efe43bb2fc56fc8cc85c"),
        "source_url": String("https://sources.example.test/openssl.tar.gz"),
    },
    Object {
        "name": String("boost"),
        "source_sha256": String("e8cab47b41f0433fe4db0cc298ca85ff9a65056102b6db96b80ee44ae3a74591"),
        "source_url": String("https://sources.example.test/boost.tar.gz"),
    },
]
