crates/pv-release/tests/snapshots/smoke__php_build_smoke_rejects_unexpected_macho_architecture.snap
---
source: crates/pv-release/tests/smoke.rs
expression: build_recipe_output_summary(&run)
---
(
    false,
    Some(
        1,
    ),
    "",
    "error: <out>/work/php-pair-8.4-darwin-arm64/php-8.4.20-pv1-darwin-arm64/bin/php Mach-O architecture x86_64 does not match expected arm64 for darwin-arm64\n",
)
